# ai110-module3show-musicrecommendersimulation-starter

./: README.md  dataflow.mmd  main.py  model_card.md  pyproject.toml
data/: songs.csv
src/: main.py  recommender.py
