[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "musicrecommendersimulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "streamlit>=1.56.0",
    "tabulate>=0.9.0",
]
